:sparkles: Feat: header
add header and general styles

--- a/index.html
+++ b/index.html
@@ -15,5 +15,30 @@
         <title>Food App | Vitor Santos</title>
         <link rel="stylesheet" href="assets/styles/css/main.css" />
     </head>
-    <body></body>
+    <body>
+        <header class="c-header flex" role="banner">
+            <img
+                src="./assets/images/logo.png"
+                alt="Bella Olonje"
+                class="c-header__logo"
+            />
+
+            <nav class="c-header__menu" role="navigation">
+                <ul class="c-header__menu-itens flex" role="menubar">
+                    <li class="c-header__item" role="menuitem">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="c-header__item" role="menuitem">
+                        <a href="#">Product</a>
+                    </li>
+                    <li class="c-header__item" role="menuitem">
+                        <a href="#">Faq</a>
+                    </li>
+                    <li class="c-header__item" role="menuitem">
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    </body>
 </html>
