:sparkles: Feat: home section
add home section

--- a/index.html
+++ b/index.html
@@ -40,5 +40,22 @@
                 </ul>
             </nav>
         </header>
+
+        <main class="c-main" role="main">
+            <section class="c-main__home flex">
+                <h4 class="c-home__app-name">Food App</h4>
+
+                <h1 class="c-home__title">
+                    Why stay hungry when <br />
+                    you can order form Bella Onojie
+                </h1>
+
+                <div class="c-home__cta">
+                    <h4>Download the bella onoje´s food app now on</h4>
+                    <button class="c-home__btn">Playstore</button>
+                    <button class="c-home__btn">App Store</button>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
