:sparkles: Feat: img overview
add figure -> img overview

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                     <button class="c-home__btn">App Store</button>
                 </div>
             </section>
+
+            <figure class="c-main__img-overview" style="">
+                <img src="./assets/images/phones.png" alt="App overview" />
+            </figure>
         </main>
     </body>
 </html>
