:sparkles: Feat: how-works section
add how-works section

--- a/index.html
+++ b/index.html
@@ -57,9 +57,52 @@
                 </div>
             </section>
 
-            <figure class="c-main__img-overview" style="">
+            <figure class="c-main__img-overview">
                 <img src="./assets/images/phones.png" alt="App overview" />
             </figure>
+
+            <section class="c-main__how-works flex">
+                <h3 class="how-works__title">How the app works</h3>
+
+                <div class="how-works__create flex">
+                    <img
+                        src="./assets/images/howAppWorks.png"
+                        alt="How App works"
+                    />
+                    <div class="content">
+                        <h3>Create an account</h3>
+                        <h4>
+                            Create/Login to an existing account to get started.
+                        </h4>
+                        <p>
+                            An account is created with your email and a desired
+                            password.
+                        </p>
+                    </div>
+                </div>
+                <div class="how-works__varieties flex">
+                    <img src="./assets/images/varieties.png" alt="Vitor" />
+                    <div class="content">
+                        <h3>Explore Varieties</h3>
+                        <h4>Shop for your favourites meal as e dey hot.</h4>
+                        <p>
+                            Shop for your favorite meals or drinks and enjoy
+                            while doing it.
+                        </p>
+                    </div>
+                </div>
+                <div class="how-works__checkout flex">
+                    <img src="./assets/images/checkout.png" alt="Checkout" />
+                    <div class="content">
+                        <h3>Checkout</h3>
+                        <h4>When you done check out and get it delivered.</h4>
+                        <p>
+                            When you done check out and get it delivered with
+                            ease.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
