:sparkles: Feat: download-cta section
add download cta action

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
                 <div class="c-home__cta">
                     <h4>Download the bella onoje´s food app now on</h4>
-                    <button class="c-home__btn">Playstore</button>
-                    <button class="c-home__btn">App Store</button>
+                    <button class="btn c-home__btn">Playstore</button>
+                    <button class="btn c-home__btn">App Store</button>
                 </div>
             </section>
 
@@ -62,9 +62,9 @@
             </figure>
 
             <section class="c-main__how-works flex">
-                <h3 class="how-works__title">How the app works</h3>
+                <h3 class="c-how-works__title">How the app works</h3>
 
-                <div class="how-works__create flex">
+                <div class="c-how-works__create flex">
                     <img
                         src="./assets/images/howAppWorks.png"
                         alt="How App works"
@@ -80,7 +80,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="how-works__varieties flex">
+                <div class="c-how-works__varieties flex">
                     <img src="./assets/images/varieties.png" alt="Vitor" />
                     <div class="content">
                         <h3>Explore Varieties</h3>
@@ -91,7 +91,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="how-works__checkout flex">
+                <div class="c-how-works__checkout flex">
                     <img src="./assets/images/checkout.png" alt="Checkout" />
                     <div class="content">
                         <h3>Checkout</h3>
@@ -101,6 +101,20 @@
                             ease.
                         </p>
                     </div>
+                </div>
+            </section>
+
+            <section class="c-main__download flex">
+                <h2 class="c-download__title">Download the app now</h2>
+
+                <h4>
+                    Avaliable on your favourite store. Start your premium
+                    experience now
+                </h4>
+
+                <div class="c-download__cta">
+                    <button class="btn c-download__btn">Playstore</button>
+                    <button class="btn c-download__btn">App Store</button>
                 </div>
             </section>
         </main>
